# deep-vision-x-player

./: CMakeLists.txt  README.md
app/player/: CMakeLists.txt
app/player/src/: DeepVisionXPlayer.cpp  ExYoloDetector.cpp  ExYoloDetector.h
dependency/darknet-cpp/: CMakeLists.txt
dependency/darknet-cpp/src/: cuda.cpp
weight/: readme
